force-app/main/default/objects/Quote/fields/HRCSVC21_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Business_Unit__c</fullName>
    <formula>CASE( TEXT(HRCSVC21_Ship_to_location__r.HRCFSL_Country__c  ), &apos;US&apos;, &apos;99635&apos;, &apos;CA&apos;, &apos;99662&apos;, &apos;99635&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>