force-app/main/default/objects/Quote/fields/HRCSVC21_Comments__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Comments__c</fullName>
    <description>SE-868: As an agent, I need to create quotes for parts orders and select from pre-defined quote templates</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>