force-app/main/default/objects/Quote/fields/HRCSVC21_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Error_Message__c</fullName>
    <description>Field to display any integration errors</description>
    <label>Integration Error Message</label>
    <type>TextArea</type>
</CustomField>