force-app/main/default/objects/Quote/fields/HRCSVC21_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>