force-app/main/default/objects/Quote/fields/HRCSVC21_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Order_Type__c</fullName>
    <description>Created as part of story SE-2798 for Quote creation.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SH</fullName>
                <label>SH - House Order</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>SO - Sales Order</label>
            </value>
            <value>
                <fullName>SP</fullName>
                <label>SP - Sales Proposal</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>SW - Service Warranty Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>