force-app/main/default/objects/Quote/fields/HRCSVC21_Pricing_Processing_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Pricing_Processing_Version__c</fullName>
    <formula>CASE( TEXT(HRCSVC21_Ship_to_location__r.HRCFSL_Country__c   ), &apos;US&apos;, &apos;HRC0005A&apos;, &apos;CA&apos;, &apos;HRC0038A&apos;, &apos;HRC0005A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Processing Version</label>
    <type>Text</type>
</CustomField>