force-app/main/default/objects/Quote/fields/HRCSVC21_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Quote_Type__c</fullName>
    <description>Created as part of story SE-2798 for Quote creation</description>
    <label>Quote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Quote</fullName>
            </value>
            <value>
                <fullName>Work Order Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>