force-app/main/default/objects/Quote/fields/HRCSVC21_Ship_to_location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Ship_to_location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship-to (location)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Quotes (Ship-to (location))</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>