force-app/main/default/objects/Quote/fields/HRCSVC21_Sold_to_location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Sold_to_location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-to (location)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>