force-app/main/default/objects/Quote/validationRules/HRCSVC21_Quote_Status_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC21_Quote_Status_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Text(Status) = &apos;Accepted&apos;, NOT(ISCHANGED(Status)), ISCHANGED(LastModifiedDate),($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You cannot change the Status from Accepted</errorMessage>
</ValidationRule>